nlamah/src/main/resources/org/nlamah/QL/test/error/combinedError.ql
form test
{
	question1 number "test1"
	question2 boolean "test2"
	
	if (test > 3)
	{
		if (question2 + 3 > 5)
		{
		}
	}
}